# Owlynn

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile.sandbox  FILE_FORMATS_GUIDE.md  FILE_FORMAT_IMPLEMENTATION.md  IMPROVEMENTS.md  LIGHTPANDA_GUIDE.md  LIGHTPANDA_SUMMARY.md  M4_DEPLOYMENT_GUIDE.md  OPTIMIZATION_COMPLETE.md  PERSONAL_ASSISTANT_MEMORY.md  QUICKSTART.md  README.md  VERIFICATION_CHECKLIST.md  build_sandbox.sh  docker-compose.yml  mcp_config.json  pytest.ini  requirements-dev.txt  requirements.txt  run.sh  run_tauri.sh  runmlx.sh  setup.sh  start.sh  test_file_processor_standalone.py  test_pdf_processing.py  verify_mcp.py
.githooks/: commit-msg
.github/: pull_request_template.md
docs/: ADR.md  AGENT_FLOW.md  AGENT_RESUME_PLAYBOOK.md  AI_AGENT_INDEX.md  AI_AGENT_PROJECT_GUIDE.md  AI_MULTI_AGENT_FRONTEND_REBUILD_PLAN.md  AI_MULTI_AGENT_RESUME_PLAYBOOK.md  AI_REBUILD_EXECUTION_PLAN.md  AI_REBUILD_MASTER_PLAN.md  API_REFERENCE.md  ARCHITECTURE_OVERVIEW.md  AUDIT_EXPORT_VERIFY_RUNBOOK.md  AUDIT_VERIFY_REPORT_SCHEMA.md  CHAT_PROTOCOL.md  EXTENDING_AGENT.md  FRONTEND_CUTOVER_ROLLBACK.md  HUMAN_PROJECT_GUIDE.md  LINEAR_GITHUB_SYNC.md  LINEAR_PROJECT_OVERSIGHT.md  LINEAR_WORKFLOW.md  PERFORMANCE_SLOS.md  PHASE1_BROWSER_MULTI_SWITCH_E2E_LOG.md  PHASE_C_COMPLETION_MATRIX.md  PHASE_C_SECURITY_SIGNOFF_TEMPLATE.md  PHASE_C_STAGING_REHEARSAL_RESULT_2026-04-23.md  PHASE_C_STAGING_REHEARSAL_RESULT_TEMPLATE.md  PROJECT_DOCUMENTATION.md  ROLLBACK_DRY_RUN_LOG.md  TOOLS.md  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+303 files in other folders)
