[package]
name = "owlynn"
version = "0.1.0"
description = "Owlynn Desktop App"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all", "macos-private-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-vibrancy = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
